--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
 [build]
-  publish = "."
+  command = "npm run build"
+  publish = "build"
+
+[build.environment]
+  NODE_VERSION = "16"
 
 [[redirects]]
   from = "/*"
